add webexteamssdk to dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
 annotated-types==0.6.0
 anyio==4.2.0
+charset-normalizer==3.3.2
 fastapi==0.109.0
+future==0.18.3
 h11==0.14.0
 idna==3.6
 pydantic-core==2.14.6
 pydantic==2.5.3
+PyJWT==2.8.0
+requests-toolbelt==1.0.0
+requests==2.31.0
 sniffio==1.3.0
 starlette==0.35.1
 typing-extensions==4.9.0
+urllib3==2.1.0
 uvicorn==0.26.0
+webexteamssdk==1.6.1
