--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ idna==3.6
 pydantic-core==2.14.6
 pydantic==2.5.3
 PyJWT==2.8.0
+python-dotenv==1.0.0
 requests-toolbelt==1.0.0
 requests==2.31.0
 sniffio==1.3.0
