add dependabot group for pydantic

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -42,3 +42,8 @@ updates:
       include: "scope"
     labels:
       - "dependencies"
+    groups:
+      pydantic:
+        patterns:
+          - "pydantic-*"
+          - "pydantic*"
