add dependabot group for fastapi

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -47,3 +47,8 @@ updates:
         patterns:
           - "pydantic-*"
           - "pydantic*"
+      fastapi:
+        patterns:
+          - "starlette"
+          - "fastapi"
+
