--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,27 +1,34 @@
-[tool.poetry]
+[project]
 name = "instant-msg-api"
 version = "0.0.0"
 description = ""
-authors = ["Luke Tainton <luke@tainton.uk>"]
 readme = "README.md"
 package-mode = false
+authors = [
+    {name = "Luke Tainton", email = "luke@tainton.uk"},
+]
+requires-python = "<4.0,>=3.11"
+dependencies = [
+    "python-dotenv<2.0.0,>=1.0.1",
+    "fastapi<1.0.0,>=0.115.7",
+    "pydantic<3.0.0,>=2.10.6",
+    "webexteamssdk<2.0,>=1.7",
+    "httpx<1.0.0,>=0.28.1",
+    "uvicorn>=0.34.0",
+]
 
-[tool.poetry.dependencies]
-python = "^3.11"
-python-dotenv = "^1.0.1"
-fastapi = "^0.115.7"
-pydantic = "^2.10.6"
-webexteamssdk = "^1.7"
-httpx = "^0.28.1"
-
-
-[tool.poetry.group.dev.dependencies]
-black = "^24.10.0"
-coverage = "^7.6.10"
-pylint = "^3.3.4"
-pylint-exit = "^1.2.0"
-pytest = "^8.3.4"
+[tool.pdm.build]
+includes = []
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
+[tool.uv]
+dev-dependencies = [
+    "black<25.0.0,>=24.10.0",
+    "coverage<8.0.0,>=7.6.10",
+    "pylint<4.0.0,>=3.3.4",
+    "pylint-exit<2.0.0,>=1.2.0",
+    "pytest<9.0.0,>=8.3.4",
+]
